syntax = "proto3";

// 命 令 号: 1000
// 命令名称: led_belt_expressions_set
// 命令描述: 灯带帧控制
// 文件名称: d1ac1000_led_belt_exp_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbLedBeltExpressionsSet";

message LedBeltExpressionsSetRequest {
  // ATTR: REQUSET
  uint32 port = 1;   //端口
  message dev_color_lump {
    uint32 index=1;
    uint32 rgbc=2; //色块rgbc值
  }
  repeated dev_color_lump color_lump=2;
}

message LedBeltExpressionsSetResponse {

}
